# Terra.Software.Models

./: .gitignore  README.md  pyproject.toml
spherearth/: __init__.py
spherearth/account/: apps.py  models.py
spherearth/account/migrations/: 0001_initial.py  0002_userprofile.py  0003_role_is_system.py
spherearth/invites/: apps.py  models.py
spherearth/invites/migrations/: 0001_initial.py
spherearth/media/: apps.py  models.py
spherearth/media/migrations/: 0001_initial.py
spherearth/news/: apps.py  models.py
spherearth/news/migrations/: 0001_initial.py
spherearth/shared/: apps.py  exceptions.py  validators.py
spherearth/shared/cms/: models.py
spherearth/shared/management/commands/: seed_spherearth_defaults.py
spherearth/soccer/media/: apps.py  models.py
spherearth/soccer/media/migrations/: 0001_initial.py
spherearth/soccer/news/: apps.py  models.py
spherearth/soccer/news/migrations/: 0001_initial.py
spherearth/website/media/: apps.py  models.py
spherearth/website/media/migrations/: 0001_initial.py
spherearth/website/news/: apps.py  models.py
spherearth/website/news/migrations/: 0001_initial.py
