[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Software.Models"
version = "0.1.0"
description = "Shared Django models for Spherearth platforms"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spherearth*"]
